# bevy_common_assets

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
assets/: trees.level.cbor  trees.level.csv  trees.level.jsonl  trees.level.msgpack  trees.level.postcard  trees.level.toml  trees.level.xml  trees.ron.level  trees.yaml.level
examples/: cbor.rs  csv.rs  json.rs  jsonl.rs  msgpack.rs  multiple_formats.rs  postcard.rs  ron.rs  toml.rs  xml.rs  yaml.rs
examples/asset_savers/: asset_savers.rs
examples/asset_savers/assets/: trees.level
src/: cbor.rs  csv.rs  json.rs  jsonl.rs  lib.rs  msgpack.rs  postcard.rs  ron.rs  toml.rs  xml.rs  yaml.rs
