[package]
name = "bevy_common_assets"
version = "0.14.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Bevy plugin adding support for loading your own asset types from common file formats such as json and yaml"
repository = "https://github.com/NiklasEi/bevy_common_assets"
homepage = "https://github.com/NiklasEi/bevy_common_assets"
documentation = "https://docs.rs/bevy_common_assets"
keywords = ["bevy", "gamedev", "asset", "assets"]
categories = ["game-development"]
readme = "./README.md"
exclude = ["assets"]

[features]
ron = ["dep:serde_ron"]
toml = ["dep:serde_toml"]
yaml = ["dep:serde_yaml"]
json = ["dep:serde_json"]
msgpack = ["dep:rmp-serde"]
xml = ["dep:quick-xml"]
csv = ["dep:csv"]
postcard = ["dep:postcard"]
cbor = ["dep:ciborium"]
default = ["csv"]

[dependencies]
bevy_ecs = {version = "0.17"}
bevy_app = {version = "0.17"}
bevy_reflect = {version = "0.17"}
bevy_asset = {version = "0.17"}
serde_toml = { version = "0.9", package = "toml", optional = true }
serde_ron = { version = "0.11", package = "ron", optional = true }
serde_yaml = { version = "0.9", optional = true }
serde_json = { version = "1", optional = true }
rmp-serde = { version = "1", optional = true }
csv = { version = "1", optional = true }
thiserror = "2.0"
quick-xml = { version = "0.38.3", features = ["serialize"], optional = true }
serde = { version = "1" }
anyhow = { version = "1" }
postcard = { version = "1.0", features = ["use-std"], optional = true }
ciborium = { version = "0.2.2", optional = true }

[dev-dependencies]
bevy = { version = "0.17.0", features = [
    "file_watcher",
    "asset_processor",
] }
serde = { version = "1" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "msgpack"
path = "examples/msgpack.rs"
required-features = ["msgpack"]

[[example]]
name = "postcard"
path = "examples/postcard.rs"
required-features = ["postcard"]

[[example]]
name = "ron"
path = "examples/ron.rs"
required-features = ["ron"]

[[example]]
name = "toml"
path = "examples/toml.rs"
required-features = ["toml"]

[[example]]
name = "yaml"
path = "examples/yaml.rs"
required-features = ["yaml"]

[[example]]
name = "json"
path = "examples/json.rs"
required-features = ["json"]

[[example]]
name = "xml"
path = "examples/xml.rs"
required-features = ["xml"]

[[example]]
name = "csv"
path = "examples/csv.rs"
required-features = ["csv"]

[[example]]
name = "cbor"
path = "examples/cbor.rs"
required-features = ["cbor"]

[[example]]
name = "multiple_formats"
path = "examples/multiple_formats.rs"
required-features = ["ron", "json"]

[[example]]
name = "asset_savers"
path = "examples/asset_savers/asset_savers.rs"
required-features = ["ron", "json", "postcard"]
